feat: 实现首页功能

--- a/src/assets/app.less
+++ b/src/assets/app.less
@@ -223,8 +223,7 @@
     bottom: 1em;
     width: 100%;
     text-align: center;
-    //color: var(--mainColor);
-    color: #d1d5db;
+    color: var(--mainColor);
     font-size: 12px;
   }
 
