update: 更改鼠标样式，增加右下角猫咪

--- a/src/assets/app.less
+++ b/src/assets/app.less
@@ -366,12 +366,12 @@
 
 @keyframes online {
   0% {
-    background: green;
+    background: grey;
   }
   50% {
     background: #67c23a;
   }
   100% {
-    background: green;
+    background: grey;
   }
 }
