--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,7 +1,7 @@
 @import './base.css';
 
 :root {
-    --mainColor: #000;
+    --mainColor: #0B0B0F;
     --bgColor: #fff;
     --dialogBgColor: #fff;
     --dialogColor: #2c3e50;
@@ -12,7 +12,7 @@
 
 [data-theme="dark"] {
     --mainColor: #fff;
-    --bgColor: #000;
+    --bgColor: #0B0B0F;
     --dialogBgColor: #232323;
     --dialogColor: #fff;
     --loadBg: #0a0916 radial-gradient(circle at center, #151333 0%, #0a0916 80%) no-repeat;
@@ -29,6 +29,7 @@ body {
     place-items: center;
     min-width: 320px;
     min-height: 100dvh;
+    cursor: url(./images/cat.cur), auto;
 }
 
 h1 {
